--- a/src/com/songlib/main.fxml
+++ b/src/com/songlib/main.fxml
@@ -1,15 +1,65 @@
+<?xml version="1.0" encoding="UTF-8"?>
+
+<?import javafx.scene.layout.*?>
+
+<!--<GridPane fx:controller="com.songlib.Controller"-->
+<!--          xmlns:fx="http://javafx.com/fxml" alignment="center"-->
+<!--&gt;-->
+<!--</GridPane>-->
+
+<!--<?import javafx.scene.control.MenuBar?>-->
+<!--<?import javafx.scene.control.MenuItem?>-->
+<!--<?import javafx.scene.control.Menu?>-->
+<!--<BorderPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/10.0.2-internal" fx:controller="com.songlib.Controller">-->
+<!--    <MenuBar>-->
+<!--        <Menu text="Main">-->
+<!--            <MenuItem text="Exit"></MenuItem>-->
+<!--        </Menu>-->
+
+<!--        <Menu text="About">-->
+<!--        </Menu>-->
+<!--    </MenuBar>-->
+<!--</BorderPane>-->
+
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.BorderPane?>
+
+
 <?import javafx.scene.text.Text?>
-
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<GridPane fx:controller="com.songlib.Controller"
-          xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10"
->
-    <Text text="Welcome"
-          GridPane.columnIndex="0" GridPane.rowIndex="0"
-          GridPane.columnSpan="2"
-    />
-
-</GridPane>
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<left>
+    <ListView prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
+</left>
+<center>
+    <BorderPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+        <top>
+            <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+                <children>
+                    <ButtonBar prefHeight="40.0" prefWidth="200.0">
+                        <buttons>
+                            <Button mnemonicParsing="false" text="Button" />
+                        </buttons>
+                    </ButtonBar>
+                    <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
+                </children>
+            </VBox>
+        </top>
+        <center>
+            <VBox alignment="CENTER">
+                <Text text="Name" />
+                <Text text="Artist" />
+                <Text text="Album" />
+                <Text text="Year" />
+            </VBox>
+        </center>
+    </BorderPane>
+</center>
+</BorderPane>
