--- a/src/com/songlib/create.fxml
+++ b/src/com/songlib/create.fxml
@@ -1,26 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ButtonBar?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Text?>
 
 <!--<AnchorPane xmlns="http://javafx.com/javafx"-->
 <!--            xmlns:fx="http://javafx.com/fxml"-->
 <!--            fx:controller="com.songlib.Create"-->
 <!--            prefHeight="400.0" prefWidth="600.0">-->
-
 <!--</AnchorPane>-->
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.text.Text?>
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.songlib.Controller">
     <bottom>
         <ButtonBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
             <buttons>
-                <Button mnemonicParsing="false" text="Cancel" />
-                <Button mnemonicParsing="false" text="Submit" />
+                <Button fx:id="cancelAddButton" mnemonicParsing="false" onAction="#cancelAddingSong" text="Cancel" />
+                <Button fx:id="submitAddButton" mnemonicParsing="false" onAction="#submitNewSong" text="Submit" />
             </buttons>
             <BorderPane.margin>
                 <Insets right="8.0" />
@@ -31,14 +31,14 @@
         <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
             <children>
                 <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Add a song" BorderPane.alignment="CENTER" />
-                <Label text="Name*" />
-                <TextField />
-                <Label text="Artist*" />
-                <TextField />
-                <Label text="Album" />
-                <TextField />
-                <Label text="Year" />
-                <TextField />
+                <Label fx:id="enterName" text="Name*" />
+                <TextField fx:id="nameTxtBox" />
+                <Label fx:id="enterArtist" text="Artist*" />
+                <TextField fx:id="artistTxtBox" />
+                <Label fx:id="enterAlbum" text="Album" />
+                <TextField fx:id="albumTxtBox" />
+                <Label fx:id="enterYear" text="Year" />
+                <TextField fx:id="yearTxtBox" />
             </children>
             <BorderPane.margin>
                 <Insets left="200.0" right="200.0" />
