--- a/src/com/songlib/main.fxml
+++ b/src/com/songlib/main.fxml
@@ -1,42 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.*?>
-
-<!--<GridPane fx:controller="com.songlib.Controller"-->
-<!--          xmlns:fx="http://javafx.com/fxml" alignment="center"-->
-<!--&gt;-->
-<!--</GridPane>-->
-
-<!--<?import javafx.scene.control.MenuBar?>-->
-<!--<?import javafx.scene.control.MenuItem?>-->
-<!--<?import javafx.scene.control.Menu?>-->
-<!--<BorderPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/10.0.2-internal" fx:controller="com.songlib.Controller">-->
-<!--    <MenuBar>-->
-<!--        <Menu text="Main">-->
-<!--            <MenuItem text="Exit"></MenuItem>-->
-<!--        </Menu>-->
-
-<!--        <Menu text="About">-->
-<!--        </Menu>-->
-<!--    </MenuBar>-->
-<!--</BorderPane>-->
-
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
-
-
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.control.ButtonBar?>
-<?import javafx.scene.control.Button?>
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.songlib.Controller">
 <left>
-    <ListView prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
+    <ListView fx:id="songList" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
 </left>
 <center>
     <BorderPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
@@ -45,7 +20,7 @@
                 <children>
                     <ButtonBar prefHeight="40.0" prefWidth="200.0">
                         <buttons>
-                            <Button mnemonicParsing="false" text="Button" />
+                            <Button fx:id="addButton" mnemonicParsing="false" onAction="#createNewSong" text="+" />
                         </buttons>
                     </ButtonBar>
                     <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
@@ -54,10 +29,15 @@
         </top>
         <center>
             <VBox alignment="CENTER">
-                <Text text="Name" />
-                <Text text="Artist" />
-                <Text text="Album" />
-                <Text text="Year" />
+                <Text fx:id="name" text="Name" />
+                <Text fx:id="artist" text="Artist" />
+                <Text fx:id="album" text="Album" />
+                <Text fx:id="year" text="Year" />
+               <Button fx:id="editOption" mnemonicParsing="false" onAction="#editSong" text="Edit">
+                  <VBox.margin>
+                     <Insets top="10.0" />
+                  </VBox.margin>
+               </Button>
             </VBox>
         </center>
     </BorderPane>
