--- a/src/com/songlib/main.fxml
+++ b/src/com/songlib/main.fxml
@@ -11,7 +11,7 @@
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.songlib.MainController">
 <left>
-    <ListView fx:id="songList" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
+    <ListView fx:id="listView" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
 </left>
 <center>
     <BorderPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
