--- a/src/com/songlib/SongListViewCell.fxml
+++ b/src/com/songlib/SongListViewCell.fxml
@@ -6,9 +6,9 @@
 <?import javafx.scene.text.Text?>
 
 <?import javafx.scene.control.Label?>
-<HBox fx:id="hBox" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" alignment="CENTER_LEFT">
+<HBox fx:id="hBox" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="100.0" prefWidth="${hBox.parent.width}" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" alignment="CENTER_LEFT">
    <children>
-      <ImageView fx:id="imageView" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="imageView" fitHeight="${hBox.width * 0.3}" fitWidth="${hBox.width * 0.3}" pickOnBounds="true" preserveRatio="true" />
       <VBox prefHeight="200.0" prefWidth="100.0" alignment="CENTER">
          <children>
             <Label fx:id="nameLabel" text="Song Name" />
