--- a/src/com/songlib/SongListViewCell.fxml
+++ b/src/com/songlib/SongListViewCell.fxml
@@ -9,10 +9,10 @@
       spacing="10" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" alignment="CENTER_LEFT"
       stylesheets="@songListViewCell.css">
    <children>
-      <ImageView fx:id="imageView" fitHeight="80" fitWidth="80" pickOnBounds="true" preserveRatio="true" />
+      <ImageView styleClass="image" fx:id="imageView" fitHeight="80" fitWidth="80" pickOnBounds="true" preserveRatio="true" />
          <VBox maxWidth="-Infinity" maxHeight="-Infinity" minWidth="100" prefHeight="50" prefWidth="100" alignment="CENTER_LEFT" spacing="5">
             <children>
-               <Label id="song-label" fx:id="nameLabel" text="Song Name" />
+               <Label minWidth="170" id="song-label" fx:id="nameLabel" text="Song Name" />
                <Label id="artist-label" fx:id="artistLabel" text="Artist Name" />
             </children>
          </VBox>
