--- a/src/com/songlib/songListViewCell.css
+++ b/src/com/songlib/songListViewCell.css
@@ -1,7 +1,11 @@
 #song-label {
-    -fx-font-size: 12pt;
+    -fx-font-size: 11.5pt;
 }
 
 #artist-label {
     -fx-font-size: 8pt;
+}
+
+.image {
+    -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.5), 20, 0, 0, 0);
 }
