--- a/src/com/songlib/create.fxml
+++ b/src/com/songlib/create.fxml
@@ -9,36 +9,39 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
-<!--<AnchorPane xmlns="http://javafx.com/javafx"-->
-<!--            xmlns:fx="http://javafx.com/fxml"-->
-<!--            fx:controller="com.songlib.Create"-->
-<!--            prefHeight="400.0" prefWidth="600.0">-->
-<!--</AnchorPane>-->
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.songlib.CreateController">
-    <bottom>
-        <ButtonBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-            <buttons>
-                <Button fx:id="cancelAddButton" mnemonicParsing="false" onAction="#cancelAddingSong" text="Cancel" />
-                <Button fx:id="submitAddButton" mnemonicParsing="false" onAction="#submitNewSong" text="Submit" />
-            </buttons>
-            <BorderPane.margin>
-                <Insets right="8.0" />
-            </BorderPane.margin>
-        </ButtonBar>
-    </bottom>
+<?import javafx.scene.layout.HBox?>
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0"
+            prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="com.songlib.CreateController" stylesheets="@create.css">
+<!--    <bottom>-->
+<!--        <ButtonBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">-->
+<!--            <buttons>-->
+<!--                <Button fx:id="cancelAddButton" mnemonicParsing="false" onAction="#cancelAddingSong" text="Cancel" />-->
+<!--                <Button fx:id="submitAddButton" mnemonicParsing="false" onAction="#submitNewSong" text="Submit" />-->
+<!--            </buttons>-->
+<!--            <BorderPane.margin>-->
+<!--                <Insets right="8.0" />-->
+<!--            </BorderPane.margin>-->
+<!--        </ButtonBar>-->
+<!--    </bottom>-->
     <center>
-        <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+        <VBox prefHeight="200.0" prefWidth="100.0" alignment="CENTER_LEFT">
             <children>
-                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Add a song" BorderPane.alignment="CENTER" />
-                <Label text="Name*" />
-                <TextField fx:id="nameTxtBox" />
-                <Label text="Artist*" />
-                <TextField fx:id="artistTxtBox" />
-                <Label text="Album" />
-                <TextField fx:id="albumTxtBox" />
-                <Label text="Year" />
-                <TextField fx:id="yearTxtBox" />
+                <VBox>
+                    <Label text="Add a song" BorderPane.alignment="CENTER_LEFT" />
+                    <Label text="Name (required)" />
+                    <TextField fx:id="nameTxtBox" />
+                    <Label text="Artist (required)" />
+                    <TextField fx:id="artistTxtBox" />
+                    <Label text="Album" />
+                    <TextField fx:id="albumTxtBox" />
+                    <Label text="Year" />
+                    <TextField fx:id="yearTxtBox" />
+                </VBox>
+                <HBox alignment="CENTER">
+                    <Button fx:id="cancelAddButton" mnemonicParsing="false" onAction="#cancelAddingSong" text="Cancel" />
+                    <Button fx:id="submitAddButton" mnemonicParsing="false" onAction="#submitNewSong" text="Submit" />
+                </HBox>
             </children>
             <BorderPane.margin>
                 <Insets left="200.0" right="200.0" />
