--- a/src/com/songlib/create.fxml
+++ b/src/com/songlib/create.fxml
@@ -42,8 +42,8 @@
                     </children>
                 </VBox>
                 <HBox alignment="CENTER" spacing="20">
-                    <Button styleClass="button" fx:id="cancelAddButton" mnemonicParsing="false" onAction="#cancelAddingSong" text="Cancel" />
                     <Button styleClass="button" fx:id="submitAddButton" mnemonicParsing="false" onAction="#submitNewSong" text="Submit" />
+                    <Button styleClass="button-negative" fx:id="cancelAddButton" mnemonicParsing="false" onAction="#cancelAddingSong" text="Cancel" />
                 </HBox>
             </children>
             <BorderPane.margin>
