--- a/src/com/songlib/edit.css
+++ b/src/com/songlib/edit.css
@@ -21,7 +21,6 @@
     -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.3), 20, 0, 0, 0);
     -fx-text-fill: #ef326a;
 }
-
 .background {
-    -fx-background-color: linear-gradient(to top left, rgba(233,84,41,0.22032563025210083) 0%, rgba(255,255,255,1) 84%);
+    -fx-background-color: linear-gradient(to top left, rgba(230, 41, 233, 0.22032563025210083) 0%, rgba(255, 255, 255, 1) 84%);
 }
