--- a/src/com/songlib/edit.fxml
+++ b/src/com/songlib/edit.fxml
@@ -9,34 +9,52 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Text?>
 
-<TitledPane animated="false" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" text="Editing song..." xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.songlib.EditController">
-  <content>
-    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-         <children>
-            <GridPane layoutX="199.0" layoutY="115.0" AnchorPane.bottomAnchor="169.0">
-              <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-              </columnConstraints>
-              <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints />
-              </rowConstraints>
-               <children>
-                  <Text fx:id="editName" strokeType="OUTSIDE" strokeWidth="0.0" text="New song name:" />
-                  <Text fx:id="editArtist" strokeType="OUTSIDE" strokeWidth="0.0" text="New artist name:" GridPane.rowIndex="1" />
-                  <Text fx:id="editAlbum" strokeType="OUTSIDE" strokeWidth="0.0" text="New album:" GridPane.rowIndex="2" />
-                   <Text fx:id="editYear" strokeType="OUTSIDE" strokeWidth="0.0" text="New year:" GridPane.rowIndex="3" />
-                  <TextField fx:id="editNameBox" GridPane.columnIndex="1" />
-                  <TextField fx:id="editArtistBox" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                  <TextField fx:id="editAlbumBox" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                   <TextField fx:id="editYearBox" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-               </children>
-            </GridPane>
-            <Button fx:id="submitEdit" layoutX="377.0" layoutY="308.0" mnemonicParsing="false" onAction="#updateSong" text="Update" />
-            <Button fx:id="cancelEdit" layoutX="173.0" layoutY="308.0" mnemonicParsing="false" onAction="#cancelEditSong" text="Cancel" />
-         </children></AnchorPane>
-  </content>
-</TitledPane>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.geometry.Insets?>
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0"
+            prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="com.songlib.EditController" stylesheets="@edit.css" styleClass="background">
+    <center>
+        <VBox minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" alignment="CENTER_LEFT" spacing="20">
+            <children>
+                <VBox spacing="10">
+                    <VBox alignment="CENTER">
+                        <Label styleClass="header" text="Edit song" BorderPane.alignment="CENTER_LEFT" />
+                    </VBox>
+
+                    <VBox spacing="10">
+                        <VBox>
+                            <Label styleClass="btn-label" fx:id="editName" text="Edit name"/>
+                            <TextField fx:id="editNameBox" />
+                        </VBox>
+                        <VBox>
+                            <Label styleClass="btn-label" fx:id="editArtist" text="Edit artist" />
+                            <TextField fx:id="editArtistBox" />
+                        </VBox>
+                        <VBox>
+                            <Label styleClass="btn-label" fx:id="editAlbum" text="Edit album" />
+                            <TextField fx:id="editAlbumBox" />
+                        </VBox>
+                        <VBox>
+                            <Label styleClass="btn-label" fx:id="editYear" text="Edit year" />
+                            <TextField fx:id="editYearBox" />
+                        </VBox>
+                    </VBox>
+                </VBox>
+
+                <HBox alignment="CENTER" spacing="20">
+                    <Button styleClass="button" fx:id="submitEdit" layoutX="377.0" layoutY="308.0" mnemonicParsing="false"
+                            onAction="#updateSong" text="Update"/>
+                    <Button styleClass="button-negative" fx:id="cancelEdit" layoutX="173.0" layoutY="308.0" mnemonicParsing="false"
+                            onAction="#cancelEditSong" text="Cancel"/>
+                </HBox>
+            </children>
+            <BorderPane.margin>
+                <Insets left="200.0" right="200.0" />
+            </BorderPane.margin>
+        </VBox>
+    </center>
+</BorderPane>
