--- a/src/com/songlib/SongListViewCell.fxml
+++ b/src/com/songlib/SongListViewCell.fxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
+<!--Ray Sy, Robert Cheng-->
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
